<resources>
    <string name="app_name">NoTicket</string>
    <string name="cancel">בטל</string>
    <string name="Accept">אישור</string>
    <string name="Disclaimer">תנאי שימוש</string>
    <string name="ChooseYourOption">בחירת אפשרות</string>
    <string name="cancelReportButton">בקשה לביטול דו\"ח</string>
    <string name="askForJudgeButton">בקשה להישפט</string>
    <string name="consultLawyerButton">בקשה להתייעצות עם עו\"ד</string>
    <string name="scanReportButton">סרוק דו\"ח</string>
    <string name="manualReportButton">מלא דו\"ח בצורה ידנית</string>
    <string name="hiString">שלום %s </string>
    <string name="fullNameLabel">שם מלא</string>
    <string name="phoneContactForm">טלפון</string>
    <string name="mailContactForm">כתובת דוא\"ל</string>
    <string name="sendButtonContactForm">שלח</string>
    <string name="askForJusdgeHeaderText">בקשה להישפט</string>
    <string name="websiteGuide"><b>הנחיות לאתר</b></string>
    <string name="guidesText1">1.   טופס זה יש למלא ולשלוח באמצעות כפתור "שלח" המופיע בתחתית הטופס. </string>
    <string name="guidesText2">2.   בקשה להישפט יש לשלוח תוך 90 ימים מיום קבלת הדו"ח באמצעות הספח שמוצמד לדו"ח. זולת, באם הדו"ח לא ברשותך.</string>
    <string name="guidesText3">3.   ההוכחה למשלוח הפנייה באמצעות טופס הפנייה ומספר הסימוכין של הטופס.</string>
    <string name="guidesText4">4.   מענה או הזמנה להישפט יישלח לכתובת שהנך מציין על גבי טופס זה.</string>
    <string name="guidesText5">5.   על מקבל הדו"ח בלבד למלא את הבקשה.</string>
    <string name="guidesText6">6.   בפנייתך הנך מתבקש לצרף:\n\t* צילום דו"ח\n\t* צילום ת.ז. + חתימה</string>
    <string name="linkToPoliceWebsiteText">קישור לאתר:\n <a href="https://forms.gov.il/globaldata/getsequence/gethtmlform.aspx?formType=driverapply@police.gov.il">https://forms.gov.il/globaldata/getsequence/gethtmlform.aspx?formType=driverapply@police.gov.il</a></string>
    <string name="askForJudgeTeaserText">מדוע כדאי לעיתים להגיש בקשה להישפט? נגד א\' תושב המרכז הוגש כתב אישום לפיו <b>עבר באור אדום 5 שניות ויותר לאחר שהאור הפך לאדום.</b> בגין עבירה זו היה צפוי ל<b>פסילה של מספר חודשים,</b> פסילה על תנאי וקנס כספי של אלפי שקלים, בגלל הסיכון הממשי הכרוך בחציית צומת באור אדום 5 שניות ויותר מאז שהתחלף לאדום.\n
        יתר על כן, כתב האישום אפילו נפתח בבית המשפט לתעבורה אך א\' טרם זומן לדיון בעניינו.\n
        לאחר שא\' זומן לבית המשפט, בדיון ההקראה הראשון <b>עורך דין לתעבורה ממשרד עורכי דין ידוע </b>העלה טענת התיישנות לפיו כתב האישום צריך להתבטל מחמת התיישנות<b>. לצורך בדיקת הטענה, הדיון נדחה למועד אחר, ובמועד הנדחה המאשימה חזרה בה מכתב האישום, וא\' ניצל מפסילה ארוכה, קנס כספי משמעותי ו-10 נקודות במשרד הרישוי</b>.\n
        דו"ח מסוג ברירת משפט תקופת ההתיישנות הינה של שנה מיום ביצוע העבירה ואילו ד"וח מסוג הזמנה לדין תקופת ההתיישנות הינה של 5 שנים מיום ביצוע העבירה. שוני נוסף הוא בדו"ח כאשר בעבירה המנוייה בו היא עבירת מהירות שצולמה ע"י מצלמה אלקטרונית, במקרה כזה ההתיישנות היא אחרי 4 חודשים.\n

    </string>
    <string name="contactUsHeader">צרו קשר</string>
    <string name="officePhoneText">טלפון: 04-8744444</string>
    <string name="officeMailText">מייל: yargil3@gmail.com</string>
    <string name="qaHeader">שאלות ותשובות</string>
    <string name="qaHeader1">מהם השלבים שיש לבצע על מנת לעכב ולבטל דו\"חות תנועה?</string>
    <string name="qaTextP1">לאחר פניות מרובות אנו מפרסמים את ה\"שיטה\" לעיכוב/ביטול דו\"חות תנועה. האיש שפיתח השיטה בחר לכנות את עצמו \"ד\"ר מוצלחי - רופא רפורטים\". נדגיש כי אין אנו, או הכותב, נושאים בכל אחריות לשיטה וכל הבוחר להשתמש בה עושה זאת על אחריותו בלבד‎.   ה\"שיטה\" מתייחסת לדו\"חות מסוג ברירת משפט (\"ברירת קנס\") ובעיקר לאלה שבנוסף לקנס נצברות עליהן נקודות. כלומר, רוב עברות הנהיגה. לא מדובר כאן על כתבי אישום שקובעים מידית תאריך משפט: אלה יטופלו במסגרת אחרת ואפשרויות להתגונן נגדן מוגבלות לעומת הראשונות. במאמר זה יסביר ד\"ר  מוצלחי לכל פתי מצוי אך הופכים את הרפורט שנרשם נגדו לבומראנג שחוזר אל המערכת. צריך ריכוז וסבלנות כדי להבין, אך הדבר אינו כה מסובך. בואו נצא לדרך‎.</string>
    <string name="qaMeetingCupHeader">שלב א\' - המפגש עם השוטר:</string>
    <string name="qaTextP2">עוצר אותך שוטר, מבקש רישיונות, מסביר שעברת עברה ורושם את הרפורט . בשום פנים ואופן לא לבקש סליחות או להתנצל. זוהי הודאה באשמה וכל מילה נרשמת! אם בכל זאת תבחרו יותר מאוחר להגיע למשפט, כל האמירות האלה תשמשנה נגדכם נשק בידי התביעה. מה כן לעשות? אפשר לנסות לדבר על ליבו של שוטר שיוותר אך לא יותר מכך. אפשר לחתום על דו\"ח, זה רק אישור על קבלתו‎, אולם אין חובה לחתום‎.</string>
    <string name="qaHeaderCheckReport">שלב ב\' - בדיקת הדו\"ח:</string>
    <string name="qaTextP3">טעות ברישום כגון מספר רכב שגוי או כתובת שגויה של מקום ביצוע העבירה הביאה פעמים רבות לביטולו‎.</string>
    <string name="qaHeaderGameStart">שלב ג\' - עכשיו מתחיל המשחק:</string>
    <string name="qaTextP4">בדו\"ח מופיע בפירוש כי תשלום הקנס מהווה הודאה באשמה. כלומר לא שילמתם אז אין רישום בגיליון ההרשעות ולא נרשמות נקודות‎. ואם נקודות, אז חשוב לדעת כי הנקודות נרשמות רק בתאריך ההרשעה (או תשלום הקנס‎) ותוקפן הוא שנתיים מיום ביצוע העבי. לפיכך, לא שילמתם את הדו\"ח‎ - בזבזתם חלק ניכר מ\"משך חיי\" הנקודות. כמובן שאי אפשר לשכוח מהדו\"ח כי יעכבו לכם את רישיון הנהיגה ולכן‎...</string>
    <string name="qaHeaderAskForCancel">שלב ד\' - בקשה לביטול:</string>
    <string name="textP5">החוק מאפשר להגיש בקשה לביטול בתוך 30 יום מקבלתו ע\"י השוטר, או קבלת דו\"ח המצלמה בדואר. יש לכתוב מכתב האומר בפשטות \"נא לבטל את הדו\"ח\", ולשלוח בדואר רשום למתנ\"א במטה הארצי בירושלים. חשוב לשמור את אישור הדואר הרשום והעתק המכתב. עכשיו מחכים. בין חודש לשלושה חודשים ממועד משלוח המכתב, תקבלו תשובה מהמשטרה לאמור: 1. \" התובע דחה את בקשתך לביטול. 2‎. הינך מתבקש לנהוג בדו\"ח ככתוב בו\" (הוא מתכוון אם טרם חלפו 90 יום, שתרוץ לשלם את הקנס המקורי לפני שיחול כפל קנס). אם חלפו 90 הימים לתשלום הקנס המקורי, תקבל בקרוב הודעה לתשלום כפל קנס, ובהודעה זו תוכל לבקש להישפט‎ - ובתנאי שתודיע ל כך תוך 30 יום מקבלת הדעה. ומה אומר ד\"ר  מוצלחי‎? : תחכו, תחכו. קודם כל יש אפשרות שהמחשבים של המשטרה יאבדו אתכם . אם לא‎ - תוך חודש עד 3 חודשים תקבלו הודעת כפל קנס עם ספח בקשה להישפט‎. ובינתיים: לא משלמים, נקודת אין, קורסים אין, הרשעה אין, עיכוב חידוש הרישיון אין‎. ממתינים 30 יום כאמור בהודעת המשטרה, או מספר ימים קודם (יום ליתר ביטחון‎), ושולחים את ספח הבקשה להישפט. בדואר רשום, תוך שמירת צילום של הספח והקבלה על הרשום. ומחכים‎.</string>
    <string name="qaHeaderNowWait">שלב ה\' - ממתינים:</string>
    <string name="textP6">ההמתנה לקבלת תאריך משפט יכולה להמשך מספר חודשים‎. תלוי בלחץ על בתי המשפט לתעבורה באותו אזור, בפגרות בתי המשפט, ובכמות הבקשות להישפט המצטברות בלשכת התביעות המרחבית במשטרה. במצב זה, אם הגיע מועד חידוש רישיון הנהיגה, אין עיכוב החידוש בגלל אי תשלום הדו\"ח הנדון! הדו\"ח הזה‎, הוא בינתיים, במצב של בירור בניכם לבין המשטרה. משרד הרישוי טרם שמע עליון‎. כידוע‎, רישיון הנהיגה מתחדש (נכון להיום) אחת ל- 5 שנים. קיבלתם את הרישיון? יש עכשיו עוד 5 שנים למשחקים עם המערכת‎. ועכשיו נקודה סופר חשובה: אם עברה למעלה משנה מאז ביקשתם להישפט ועד שקיבלתם הודעה על תאריך המשפט (וזה קורה הרבה!) אז אין המשטרה רשאית להגיש את הדו\"ח‎. למעשה הוא מיועד לביטול סופי. (תקנה 230 לתקנות סדר פלילי). כדי בכל זאת לערוך את המשפט, חייבת המשטרה לבקש אישור מיוחד ומנומק מבתי המשפט‎, וזכותכם להתנגד שבית המשפט יאשר זאת למשטרה. בפועל, התובע המשטרתי אינו טורח להתאמץ בעניין זה. איך מבקשים ביטול במקרה כזה? פשוט מאוד. פונים לתובע, ביום שנקבע לדיון או ימים מספר לפני כן, ומבקשים שהדו\"ח יבוטל מהסיבה דלעיל‎. לידיעתכם: רק מסיבה זו המשטרה מבטלת מאות דו\"חות שנה‎!</string>
    <string name="qaHeaderTheTrial">שלב ו\' - יש משפט:</string>
    <string name="textP7">כדי להביא בחשבון את האפשרות הפחות טובה, נצא בהנחה שההודעה על תאריך המשפט הגיעה אליכם תוך פחות משנה מאז שביקשתם להישפט‎. הדיון בבית המשפט יתקיים 3-4 חודשים נוספים בדרך כלל, ממועד קבלת ההודעה על תאריך המשפט‎. וזה הזמן לעצור לרגע , ולעשות חשבון כמה זמן בערך עיכבנו את הדו\"ח‎, וזאת לפי שתי אפשרויות: דו\"ח שוטר ודו\"ח מצלמה.  נתחיל עם השוטר: o\t1 חודש (30 יום) עד שליחת הבקשה לביטול. o\t1-3 חודשים נוספים לקבלת התשובה על דחיית הבקשה. o\t2-3 חדשים נוספים לקבלת הודעה על כפל קנס ואפשרות להישפט. o\t1 חודש נוסף למשלוח הבקשה לקביעת תאריך משפט. o\t3-12 חודשים לקבלת תאריך משפט. o\t3-6 חודשים למועד המשפט מאז קבלת ההודעה עליו. סה\"כ עד המשפט עצמו: 11-26 חודשים. בממוצע, כל תהליך הזה אורך כ-15 חודשים, כלומר כשנה ורבע.   במקרה של דוח מצלמה: להוסיף למניין דלעיל 3 חודשים בערך, זו התקופה הממוצעת בין אירוע הצילום ועד להגעת דו\"ח המצלמה אל הנהג‎. ובינתיים: לא משלמים, אין נקודות, אין הרשעה ואין עיכוב חידוש רישיון‎. חשוב לדעת! כל ההתכתבויות והטרטורים האלה מגבירים בצורה משמעותיות את הסיכויים שהדו\"ח הזה \"יתפספס\" למשטרה, ושהתיק ילך לאיבוד או תיפול טעות באחת ההקלדות שתגרום לו להעלם! ככל שירבה מספרם של המשתמשים בשיטה, כן ילך ויגבר הסיכוי לאבדן דו\"חות רבים יותר‎.</string>
    <string name="qaHeaderWeGotToATrial">שלב ז\' - למרות הכל הגענו למשפט, מה עכשיו?</string>
    <string name="textP8">שוב שתי אפשרויות:         ·           הראשונה‎: לא להודות באשמה, ואז ייקבע תור להוכחות, כאשר יהיה על התביעה להביא את השוטר שהגיש את הדו\"ח שיעיד על הנסיבות של העבירה. זכותכם לחקור אותו. דוקטור מוצלחי סבור שזה צעד מסוכן והימור גדול. אם השופט לא יקבל את גרסתכם, אז תחטפו ממנו עונש רציני בצורת קנס גבוה ומי יודע מה עוד, כעונש על בזבוז הזמן של המשטרה ושל בית המשפט . על כן ממליץ ד\"ר מוצלאחי לבחור באפשרות השנייה והיא: ביום המשפט, או ימים מספר לפני כן, לדבר עם התובע בזו הלשון‎: \"ביום‎... יש  משפט. אמנם אני לא אשם אבל אין לי זמן לכל בלבולי המוח האלה. אני מוכן להודות תמורת הקנס המקורי. בסדר?! (להזכירכם: הקנס למעשה הכפיל והשליש את עצמו ואתם ברוב חוצפתכם מציעים לתבוע קנס מקורי?! כן). דעו לכם, שב- 99% מהמקרים התובע יסכים. מה אכפת לו - זה עניין אישי שלו? מה שמעניין את התובע זה לגמור את התיק ולא למשוך אותו. אף אחד לא בודק אותו בכמה סוכמה \"העסקה‎\". העומס על התביעה הוא עצום ומבחינתם זה פשוט עסק בקבלנות בו צריך להספיק לגמור כמה שיותר עבודה בכמה שפחות זמן. כדי להתגבר על כמויות התיקים הנערמות חדשות לבקרי. אז לא להתבייש, להציע \"ולסגור\" בקנס המקורי. זה עובד.   ישנה עוד אפשרות: בדיון הראשון לא להודות, ואז קובעים תור להוכחות. קורה פעמים רבות שלמשטרה יש בעיה להביא את השוטר לעדות (אולי הוא פרש? אולי הוא במרחב אחר‎, אולי, הוא חולה) ואז המשטרה מיוזמתה תידחה את הדין להוכחות ותשלח לכם הודעה על כך. ואז שוב מחכים ומחכים ובינתיים אתם כאמור מסודרים. במקרה היותר גרוע‎, השוטר יגיע לדיון. גם אז, ועדיין לא מאוחר, אפשר להציע לתובע את אפשרות ב‎\'. דהיינו, לסגור עם התובע על קנס מקורי. מקסימום הוא ישלח את העד/השוטר הביתה, וגם השוטר יהיה שבע רצון מכך וימהר להסתלק לענייניו‎.</string>
    <string name="qaHeaderProsAndCons">מה הרווח ומה ההפסד ליישום שיטת ד\"ר מוצלאחי?</string>
    <string name="textP9">ועכשיו סיכום: מאזן רווח והפסד. חטפנו דו\"ח, וזה דבר בלתי הפיך. היינו תלמידים טובים וממושמעים של ד\"ר מוצלאחי מה הרווחנו? •\tדחייה של שנה עד שנתיים ויותר ברישום הדו\"ח בהרשעות. •\tדחייה של שנה עד שנתיים ויותר בתשלום הקנס המקורי. •\tנקודות לא נרשמו לנו, ואם חלפו שים עד ההרשעה, הנקודות כבר לא תירשמנה, ולכן אולי חסכנו קורס, אולי חסכנו שלילה (כל אחד לפי כמות הנקודות שצבר עד אז). •\tסיכוי טוב מאוד היה לנו לאובדן בדו\"ח, ואם אכן זה קרה (וזה קורה הרבה) אזי הרווח הוא 100%. עד תום המשפט, אם היה בכלל משפט, •\tלא עיכבו לנו את חידוש רישיון הנהיגה. מה ההפסד? - אין. מהי ההשקעה? 1)  קצת שכל שכל בריא. 2)  להיות מסודר עם התאריכים של משלוח כל ההודעות (חשוב מאד מאד !!! פספוס בתאריכי משלוח ההודעות יכול להפיל את כל העסק!) 3)    לשמור בקלסר מסודר את כל הניירת שמקבלים/שולחים.    עוד מסר חשוב יש לו לד\"ר  מוצלחי:  מספיק עוד 1% של משתמשי שיטת מוצלחי מבין מקבלי הדו\"חות, כדי שהמערכת תקרוס: •\tאין להם מספיק קלדניות, •\tאין מספיק שופטים ואין להם מספיק שעות בתי משפט!   אם מספרם של משתמשי השיטה יגדל ב-2, 3 או 4% - זוהי קטסטרופה למשטרה. כל דו\"ח שהשוטרים בשטח יירשמו לנהגים‎, יגביר את העומס. זה מה שנקרא \"גול עצמי.\"</string>
    <string name="qaHeaderWhatThePoliceWillDo">מה תעשה המשטרה כשתרגיש את תוצאות השיטה?</string>
    <string name="textP10">הד\"ר: אין ספק שהמשטרה תצטרך התארגנות מחדש לעניין הזה, כולל שינוי בתקנות התעבורה.  אולם עד אז במצב הקיים - השיטה מנצחת‎!</string>
</resources>