<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/qaHeader"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/qaHeader"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qaHeader"
        app:layout_constraintVertical_bias="0.043">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qaHeader1"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textP1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/qaTextP1" />

            <TextView
                android:id="@+id/qaHeaderMeetingCup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/qaMeetingCupHeader"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textP2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/qaTextP2" />

            <TextView
                android:id="@+id/qaHeader3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/qaHeaderCheckReport"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textP3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/qaTextP3" />

            <TextView
                android:id="@+id/qaHeader4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/qaHeaderGameStart"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textP4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/qaTextP4" />

            <TextView
                android:id="@+id/qaHeader5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/qaHeaderAskForCancel"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textP5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/textP5" />

            <TextView
                android:id="@+id/qaHeader6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/qaHeaderNowWait"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textP6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/textP6" />

            <TextView
                android:id="@+id/qaHeader7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/qaHeaderTheTrial"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textP7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/textP7" />

            <TextView
                android:id="@+id/qaHeader8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/qaHeaderWeGotToATrial"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textP8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/textP8" />

            <TextView
                android:id="@+id/qaHeader9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/qaHeaderProsAndCons"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textP9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/textP9" />

            <TextView
                android:id="@+id/qaHeader10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/qaHeaderWhatThePoliceWillDo"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textP10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/textP10" />
        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>