<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/askForJudgeHeader"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/askForJusdgeHeaderText"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/askForJudgeHeader">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <TextView
                android:id="@+id/guidesHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="24dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/websiteGuide" />

            <TextView
                android:id="@+id/guidesText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/guidesText1" />

            <TextView
                android:id="@+id/guidesText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/guidesText2" />

            <TextView
                android:id="@+id/guidesText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/guidesText3" />

            <TextView
                android:id="@+id/guidesText4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/guidesText4" />

            <TextView
                android:id="@+id/guidesText5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/guidesText5" />

            <TextView
                android:id="@+id/guidesText6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:text="@string/guidesText6" />

            <TextView
                android:id="@+id/linkToPoliceWebsite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/linkToPoliceWebsiteText"
                app:layout_constraintEnd_toEndOf="parent"
                android:autoLink="web"
                app:layout_constraintTop_toBottomOf="@+id/guidesText" />

            <TextView
                android:id="@+id/askForJudgeTeaser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:text="@string/askForJudgeTeaserText" />
        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>